istio-teaching/gateway-api/manifest/tcproute/echo-tcproute-forwardTo-backendRef-goup.yaml
kind: TCPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: echo
  labels:
    gateway: echo
spec:
  gateways:
    allow: All
  rules:
  - forwardTo:
    - backendRef:
        group: core
        kind: Service
        name: tcp-echo
      port: 9000
