istio-teaching/gateway-api/manifest/tcproute/echo-tcproute-gateways-allow-SameNamespace.yaml
kind: TCPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: echo
  labels:
    gateway: echo
spec:
  gateways:
    allow: SameNamespace
  rules:
  - forwardTo:
    - serviceName: tcp-echo
      port: 9000
