istio-teaching/gateway-api/manifest/tcproute/echo-tcproute-rules-forwardTo-weight.yaml
kind: TCPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: echo
  labels:
    gateway: echo
spec:
  gateways:
    allow: All
  rules:
  - forwardTo:
    - serviceName: tcp-echo
      port: 9000
      weight: 50
    - serviceName: tcp-echo-v2
      port: 9000
      weight: 50
